<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="textPersonName"
        android:text="@string/output"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/outputSize" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="360dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/c"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:text="@string/c"
            android:textSize="@dimen/btnTxtSize"/>
        <Button
            android:id="@+id/ce"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/ce"
            android:textSize="@dimen/btnTxtSize"/>
        <Button
            android:id="@+id/pORm"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/plusOrMinus"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/divide"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/one"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/two"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/three"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/times"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/four"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/five"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/six"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/seven"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/add"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/add"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/eight"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/nine"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/subtract"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/subtract"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/decimal"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/decimal"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/zero"
            android:textSize="@dimen/btnTxtSize"/>

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:text="@string/equals"
            android:textSize="@dimen/btnTxtSize"/>
    </GridLayout>

</LinearLayout>